# GPT2_Japanese_toy

./: pyproject.toml
model/: gpt2_predictor.py  main.py
