[tool.poetry]
name = "allennlp_exp1"
version = "0.1.0"
description = ""
authors = ["Akirtn"]

[tool.poetry.dependencies]
python = "^3.9.4"
allennlp-models = "^2.4.0"
allennlp = "^2.4.0"
pytorch-pretrained-bert = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
